# a2a-protocol

./: .gitignore  API.md  BRANDING.md  LICENSE  PUBLISHING.md  README.md  SPEC.md  TUTORIAL.md  VIDEO_SCRIPTS.md  a2a_bridge.py  a2a_cli.py  a2a_directory.py  a2a_sdk.py  index.html  pyproject.toml
csharp/: README.md
csharp/A2A/: A2A.csproj  A2ASDK.cs
examples/: README.md  autogen_integration.md  crewai_integration.md  demo_multi_agent.py  echo_agent.py  langchain_integration.md  requester_demo.py
go/: README.md  example_agent.go  go.mod
go/a2a/: sdk.go  server.go
java/: README.md  pom.xml
java/src/main/java/com/a2a/: A2ASDK.java
rust/: Cargo.toml  README.md
rust/examples/: example_agent.rs
rust/src/: lib.rs
typescript/: README.md  a2a.ts  package.json  test.mjs  tsconfig.json
typescript/examples/: demo.ts
