[package]
name = "a2a-protocol"
version = "0.1.0"
edition = "2021"
description = "A2A Protocol SDK for Rust"
authors = ["Mentessa"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[lib]
name = "a2a"
path = "src/lib.rs"
